@@ -1,7 +1,11 @@
 package com.nhnacademy.heukbaekbookshop.memberset.member.service.impl;
 
+import com.nhnacademy.heukbaekbookshop.book.exception.book.BookNotFoundException;
+import com.nhnacademy.heukbaekbookshop.common.util.Converter;
+import com.nhnacademy.heukbaekbookshop.common.util.Formatter;
 import com.nhnacademy.heukbaekbookshop.memberset.address.domain.MemberAddress;
 import com.nhnacademy.heukbaekbookshop.memberset.address.dto.MemberAddressResponse;
+import com.nhnacademy.heukbaekbookshop.memberset.customer.domain.Customer;
 import com.nhnacademy.heukbaekbookshop.memberset.grade.domain.Grade;
 import com.nhnacademy.heukbaekbookshop.memberset.grade.dto.GradeDto;
 import com.nhnacademy.heukbaekbookshop.memberset.member.dto.mapper.MemberMapper;
@@ -10,6 +14,7 @@ import com.nhnacademy.heukbaekbookshop.memberset.member.dto.request.MemberUpdate
 import com.nhnacademy.heukbaekbookshop.memberset.member.dto.request.OAuthMemberCreateRequest;
 import com.nhnacademy.heukbaekbookshop.memberset.member.dto.response.MemberDetailResponse;
 import com.nhnacademy.heukbaekbookshop.memberset.member.dto.response.MemberResponse;
+import com.nhnacademy.heukbaekbookshop.memberset.member.dto.response.MyPageOrderDetailResponse;
 import com.nhnacademy.heukbaekbookshop.memberset.member.dto.response.MyPageResponse;
 import com.nhnacademy.heukbaekbookshop.memberset.member.exception.InvalidPasswordException;
 import com.nhnacademy.heukbaekbookshop.memberset.member.exception.MemberAlreadyExistException;
@@ -22,24 +27,26 @@ import com.nhnacademy.heukbaekbookshop.memberset.address.repository.MemberAddres
 import com.nhnacademy.heukbaekbookshop.memberset.member.repository.MemberRepository;
 import com.nhnacademy.heukbaekbookshop.memberset.member.service.MemberService;
 import com.nhnacademy.heukbaekbookshop.order.domain.Order;
-import com.nhnacademy.heukbaekbookshop.order.dto.response.OrderBookResponse;
-import com.nhnacademy.heukbaekbookshop.order.dto.response.OrderResponse;
-import com.nhnacademy.heukbaekbookshop.order.dto.response.OrderSummaryResponse;
+import com.nhnacademy.heukbaekbookshop.order.domain.OrderBook;
+import com.nhnacademy.heukbaekbookshop.order.dto.response.*;
+import com.nhnacademy.heukbaekbookshop.order.exception.OrderNotFoundException;
+import com.nhnacademy.heukbaekbookshop.order.repository.OrderRepository;
 import com.nhnacademy.heukbaekbookshop.point.history.event.SignupEvent;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.context.ApplicationEventPublisher;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.List;
-import java.util.NoSuchElementException;
-import java.util.Objects;
+import java.math.BigDecimal;
+import java.util.*;
 import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 @Transactional(readOnly = true)
+@Slf4j
 public class MemberServiceImpl implements MemberService {
     private final BCryptPasswordEncoder bCryptPasswordEncoder;
     private final MemberRepository memberRepository;
@@ -47,6 +54,7 @@ public class MemberServiceImpl implements MemberService {
     private final CustomerRepository customerRepository;
     private final GradeRepository gradeRepository;
     private final ApplicationEventPublisher eventPublisher;
+    private final OrderRepository orderRepository;
 
     @Override
     @Transactional
@@ -151,32 +159,59 @@ public class MemberServiceImpl implements MemberService {
         Member member = memberRepository.searchByCustomerId(customerId)
                 .orElseThrow(MemberNotFoundException::new);
 
-        MemberResponse memberResponse = new MemberResponse(
-                member.getName(),
-                member.getPhoneNumber(),
-                member.getEmail(),
-                member.getLoginId(),
-                member.getBirth(),
-                member.getCreatedAt(),
-                member.getLastLoginAt(),
-                member.getStatus(),
-                new GradeDto(
-                        member.getGrade().getGradeName(),
-                        member.getGrade().getPointPercentage(),
-                        member.getGrade().getPromotionStandard()
-                )
-        );
+        MemberResponse memberResponse = MemberMapper.createMemberResponse(member);
 
-        List<OrderSummaryResponse> orderSummaryResponses = member.getOrders().stream()
-                .map(order -> new OrderSummaryResponse(
-                        order.getCreatedAt().toLocalDate(),
-                        order.getTossOrderId(),
-                        order.getStatus().name(),
-                        null
-                ))
-                .toList();
+        List<Order> orders = orderRepository.searchByCustomerId(customerId);
+
+        List<OrderSummaryResponse> orderSummaryResponses = orders.stream()
+                .map(this::createOrderSummaryResponse)
+                .collect(Collectors.toList());
 
         return new MyPageResponse(memberResponse, new OrderResponse(orderSummaryResponses));
+    }
+
+    private OrderSummaryResponse createOrderSummaryResponse(Order order) {
+        // 제목 생성 로직
+        String title = createOrderTitle(order);
+
+        int size = order.getOrderBooks().size();
+        String totalPrice = Formatter.formatPrice(order.getTotalPrice());
+
+        // OrderSummaryResponse 생성
+        return new OrderSummaryResponse(
+                order.getCreatedAt().toLocalDate(),
+                order.getTossOrderId(),
+                title,
+                order.getStatus().getKorean(),
+                order.getCustomerName(),
+                totalPrice + "/" + size,
+                new DeliverySummaryResponse(order.getDelivery().getRecipient())
+        );
+    }
+
+    private String createOrderTitle(Order order) {
+        int size = order.getOrderBooks().size() - 1;
+        String title = order.getOrderBooks().stream()
+                .findFirst()
+                .map(orderBook -> orderBook.getBook().getTitle())
+                .orElse("제목 없음");
+        return size > 0 ? title + " 외 " + size + "종" : title;
+    }
+
+    @Override
+    public MyPageOrderDetailResponse getMyPageDetailResponse(Long customerId, String tossOrderId) {
+        Member member = memberRepository.searchByCustomerId(customerId)
+                .orElseThrow(MemberNotFoundException::new);
+
+        MemberResponse memberResponse = MemberMapper.createMemberResponse(member);
+
+        Order order = orderRepository.searchByTossOrderId(tossOrderId)
+                .orElseThrow(() -> new OrderNotFoundException(tossOrderId + " order not found"));
+
+        OrderDetailResponse orderDetailResponse = OrderDetailResponse.of(order);
+
+
+        return new MyPageOrderDetailResponse(memberResponse, orderDetailResponse);
     }
 
     @Override
